--- a/css/style.css
+++ b/css/style.css
@@ -6,26 +6,50 @@ body {
 
 /* Header */
 #banner {
+  padding-top: 1em;
   text-align: center;
-  background-color: #4f4f4f;
-  background-image: url("../images/hero1.jpg");
+  background-color: rgb(79, 79, 79);
+  background-image: url("../images/hero4.jpg");
   background-size: cover;
+  background-position: center;
 }
-
 img {
-  max-width: 25%;
+  max-width: 60%;
   height: auto;
   border: 1px solid black;
   border-radius: 50%;
 }
-/* ========================================== */
+#intro-text {
+  margin: 4em;
+}
+#nav-bar {
+  position: sticky;
+  top: 0;
+  background-color: rgb(0, 0, 0);
+}
+/* #nav-div {
+  display: flex;
+} */
+#nav-list {
+  margin: 0;
+  padding: 1em;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+/* =================================================================== */
 
 /* Main */
+article {
+  margin: 1em;
+}
 aside {
   background-color: #d9d9d9;
   padding: 1em;
+  background-image: linear-gradient(rgb(95, 173, 179), rgb(241, 241, 241));
 }
-/* ========================================== */
+/* ================================================================== */
 
 /* footer */
 footer {
@@ -34,29 +58,26 @@ footer {
   text-align: center;
 }
 form {
-  margin: 5% 20%;
+  margin: 5% 10%;
   padding: 2% 0%;
   background-color: white;
   border-radius: 10px;
 }
-/* input {
-    color: rgb(99, 99, 99);
-} */
 input,
 select,
 textarea,
 button {
   color: black;
-  background-color: #bebebe;
+  background-color: #e4e4e4;
   padding: 0.8em 0.8em;
   width: 60%;
   height: auto;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   border: solid 1px #999;
   border-radius: 10px;
 }
-/* #subject {
-  width: 68%;
-} */
 button {
   width: 30%;
   color: white;
@@ -78,17 +99,14 @@ button {
 }
 /* The animation code */
 @keyframes animatedIcon {
-  0% {
-    transform: ;
-    border-radius: 0;
-  }
-  30% {
+  /* 0% {
     transform: rotate(360deg);
-    border-radius: 50%;
+  } */
+  50% {
+    transform: rotate(360deg);
   }
   100% {
     transform: rotate(720deg);
-    border-radius: 0;
   }
 }
 
@@ -96,28 +114,134 @@ button {
 .linkedin-img:hover,
 .github-img:hover {
   animation-name: animatedIcon;
-  animation-duration: 5s;
+  animation-duration: 6s;
   animation-iteration-count: infinite;
   animation-delay: 0s;
   animation-direction: normal;
 }
-/* ========================================== */
+/* ================================================================ */
 
-/* Typography */
+/* General styling */
+a {
+  text-decoration: none;
+  color: white;
+}
+.padding-bottom {
+  padding-bottom: 2em;
+}
+/* ================================================================ */
+
+
+/* =====Typography===== */
+h1, h2 {
+  font-weight: 400;
+}
+#top-text,
 #intro-text,
 #contact {
   color: white;
 }
-
+.main-text, h3 {
+  color: #636363;
+}
+.edu-text {
+  padding-bottom: 0.5em;
+  color: #616161;
+  font-size: 1.2em;
+}
+.external-links {
+  color: rgb(0, 131, 28);
+  font-weight: 500;
+}
+a:hover {
+  color: rgb(109, 109, 109);
+}
+#intro-text,
+.main-text,
+a {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 h1,
 h2,
-h3 {
+h3,
+.external-links {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-  font-weight: 450;
+}
+/* ================================================================ */
+
+/* media queries */
+@media (max-width: 768px) {
+  /* Styles for screens smaller than 768px */
+  img {
+    width: 12em;
+    height: auto;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* Styles for screens between 769px and 1024px */
+  #banner {
+    padding-top: 3em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2fr 2fr 1fr;
+    align-items: center;
+  }
+  picture {
+    grid-area: 1 / 1 / 3 / 2;
+    grid-row: span 2;
+  }
+  #top-text {
+    grid-area: 1 / 2 / 2 / 3;
+    text-align: left;
+  }
+  #intro-text {
+    margin: 0;
+    text-align: left;
+  }
+  #top-link {
+    grid-column: span 2;
+  }
+  form {
+    margin: 5% 20%;
+    padding: 2% 0%;
+  }
+  /* img {
+    max-width: 80%;
+    height: auto;
+  } */
 }
 
-.main-text {
-  color: #464646;
+@media (min-width: 1024px) {
+  /* Styles for screens larger than 1024px */
+  main {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+  }
+  #banner {
+    padding-top: 3em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    align-items: center;
+  }
+  picture {
+    grid-area: 1 / 1 / 2 / 2;
+    align-self: end;
+  }
+  img {
+    width: 60%;
+  }
+  #intro-text {
+    margin: 2.5em;
+    text-align: left;
+  }
+  #top-link {
+    grid-column: span 3;
+  }
+  aside {
+    margin-top: -1.2em;
+  }
+  form {
+    margin: 2% 30%;
+    padding: 2% 0%;
+  }
 }
-
-/* General styling */
